tests/parser/snapshots/tests__parser__parser_errors_snapshots__report_missing_comma_in_function_call.snap
---
source: tests/parser/parser_errors_snapshots.rs
expression: snapshot_parser_errors(source)
---
nox::parser::expected_token

  × expected `,`, found `integer literal`
   ╭─[main.nox:1:19]
 1 │ my_func(10, name, age 11)
   ·                   ─┬─
   ·                    ╰── expected `,` after this
   ╰────
  help: insert the missing token or remove the unexpected one
