tests/parser/snapshots/tests__parser__parser_errors_snapshots__report_missing_parenthesis_in_function_call.snap
---
source: tests/parser/parser_errors_snapshots.rs
expression: snapshot_parser_errors(source)
---
nox::parser::unclosed_delimiter

  × unclosed delimiter
   ╭─[main.nox:1:8]
 1 │ my_func(10, name, age
   ·        ┬
   ·        ╰── expected `)` to close this
   ╰────
  help: insert a `)` to close this group
