tests/parser/snapshots/tests__parser__parser_errors_snapshots__report_unclosed_parenthesis.snap
---
source: tests/parser/parser_errors_snapshots.rs
expression: snapshot_parser_errors(source)
---
nyx::parser::unclosed_delimiter

  × unclosed delimiter
   ╭─[main.nyx:1:1]
 1 │ (10 + 20
   · ┬
   · ╰── expected `)` to close this
   ╰────
  help: insert a `)` to close this group

